# apertium-szl

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-szl.pc.in  apertium-szl.post-szl.dix  apertium-szl.szl.acx  apertium-szl.szl.dix  apertium-szl.szl.rlx  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-morph-output.txt  tests.json
